# cmake_testing_grounds

./: CMakeLists.txt
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
